add libxpm dependency

--- a/xmobar-volume-git/PKGBUILD
+++ b/xmobar-volume-git/PKGBUILD
@@ -23,6 +23,7 @@ depends=(
   'gmp'
   'libxft'
   'libxinerama'
+  'libxpm'
   'libxrandr'
   'wireless_tools')
 conflicts=('xmobar' 'xmobar-darcs' 'xmobar-git')
